<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    tools:context="edu.calpoly.cvbrm.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_route"
        android:textSize="40sp"
        android:padding="16dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:id="@+id/config_button"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/draw_route"
        android:textSize="40sp"
        android:padding="16dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:id="@+id/canvas_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_routes"
        android:textSize="24sp"
        android:layout_gravity="left"
        android:padding="16dp"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_recycler"
        android:layout_gravity="bottom|fill"
        android:padding="10dp"/>
</LinearLayout>
