<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_config"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="top|center_horizontal"
    tools:context="edu.calpoly.cvbrm.ConfigActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="top|center_horizontal">

        <ImageView
            android:id="@+id/edge_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical|center"
            android:gravity="fill_vertical"
            android:padding="16dp"
            android:src="@color/colorBack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blur_text"
            android:text="@string/blur" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blur_num"
            android:text="3"/>
    </LinearLayout>
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="30"
        android:id="@+id/blur_val"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thresh_text"
            android:text="@string/lower_threshold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thresh_num"
            android:text="80"/>
    </LinearLayout>
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="80"
        android:id="@+id/thresh_val"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:layout_gravity="center_vertical"/>
                <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@string/opn"
                    android:id="@+id/distance"
                    android:layout_weight="2"
                    android:textAlignment="textEnd"
                    android:layout_gravity="end"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/mi"/>
            </LinearLayout>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="5dp"
                android:id="@+id/color_buttons">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#3300DD"
                    android:layout_marginRight="10dp"
                    android:id="@+id/blue_line"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#6600AA"
                    android:layout_marginRight="10dp"
                    android:id="@+id/purp_line"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#990077"
                    android:layout_marginRight="10dp"
                    android:id="@+id/mag_line"/>
                <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#CC0044"
                    android:layout_marginRight="10dp"
                    android:id="@+id/ruby_line"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FF0011"
                    android:id="@+id/red_line"/>
t
            </RadioGroup>

            <Button
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/next_button"
                android:text="@string/next"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
